[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "railyard"
version = "0.1.0"
description = "State-machine guardrails for AI agents — make illegal transitions impossible."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Railyard Contributors" }]
keywords = ["state-machine", "agents", "guardrails", "ai", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/nousresearch/railyard"
Issues = "https://github.com/nousresearch/railyard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/railyard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
